hw_09/rabbitMQ/rabbit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-svc
  namespace: default
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  type: NodePort
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
