hw_09/rabbitMQ/rabbit-ingress5672.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: rabbit-ingress5672
    namespace: default
    # annotations:
    #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: rabbit.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-svc
                port:
                  number: 5672
